// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiService getAssets (backspin) gets the correct assets for networks (Bitcoin) 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "390000",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (backspin) gets the correct assets for networks (Ethereum) 1`] = `
[
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "580000000000000",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1000000",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "1000000",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0x10C6E9530F1C1AF873a391030a1D9E8ed0630D26",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "1000000000000000000",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
]
`;

exports[`ApiService getAssets (backspin) gets the correct assets for networks (Polkadot) 1`] = `
[
  {
    "asset": "DOT",
    "chain": "Polkadot",
    "chainflipId": "Dot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": "2000000000",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "2000000000",
    "name": "Polkadot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (mainnet) gets the correct assets for networks (Bitcoin) 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "390000",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (mainnet) gets the correct assets for networks (Ethereum) 1`] = `
[
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "580000000000000",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": "1000000",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "1000000",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0x826180541412D574cf1336d22c0C0a287822678A",
    "decimals": 18,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "1000000000000000000",
    "name": "FLIP",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (mainnet) gets the correct assets for networks (Polkadot) 1`] = `
[
  {
    "asset": "DOT",
    "chain": "Polkadot",
    "chainflipId": "Dot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": true,
    "maximumSwapAmount": "2000000000",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "2000000000",
    "name": "Polkadot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for networks (Bitcoin) 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "390000",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for networks (Ethereum) 1`] = `
[
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "580000000000000",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1000000",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "1000000",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xdC27c60956cB065D19F08bb69a707E37b36d8086",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "1000000000000000000",
    "name": "FLIP",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for networks (Polkadot) 1`] = `
[
  {
    "asset": "DOT",
    "chain": "Polkadot",
    "chainflipId": "Dot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": "2000000000",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "2000000000",
    "name": "Polkadot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for networks (Bitcoin) 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "390000",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for networks (Ethereum) 1`] = `
[
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "580000000000000",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1000000",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "1000000",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xcD079EAB6B5443b545788Fd210C8800FEADd87fa",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "1000000000000000000",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0x7169D38820dfd117C3FA1f22a697dBA58d90BA06",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for networks (Polkadot) 1`] = `
[
  {
    "asset": "DOT",
    "chain": "Polkadot",
    "chainflipId": "Dot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": "2000000000",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "2000000000",
    "name": "Polkadot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getChains gets mainnet chains 1`] = `
[
  {
    "chain": "Ethereum",
    "isMainnet": true,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Polkadot",
    "isMainnet": true,
    "name": "Polkadot",
    "requiredBlockConfirmations": undefined,
  },
  {
    "chain": "Bitcoin",
    "isMainnet": true,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
]
`;

exports[`ApiService getChains gets testnet chains (perseverance) 1`] = `
[
  {
    "chain": "Ethereum",
    "isMainnet": false,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Polkadot",
    "isMainnet": false,
    "name": "Polkadot",
    "requiredBlockConfirmations": undefined,
  },
  {
    "chain": "Bitcoin",
    "isMainnet": false,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
]
`;

exports[`ApiService getChains gets testnet chains (sisyphos) 1`] = `
[
  {
    "chain": "Ethereum",
    "isMainnet": false,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Polkadot",
    "isMainnet": false,
    "name": "Polkadot",
    "requiredBlockConfirmations": undefined,
  },
  {
    "chain": "Bitcoin",
    "isMainnet": false,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
]
`;

exports[`ApiService getQuote gets a quote 1`] = `
{
  "amount": "10000",
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService getQuote gets a quote 2`] = `
[
  "https://swapperoo.org/quote?amount=10000&srcChain=Bitcoin&srcAsset=BTC&destChain=Ethereum&destAsset=ETH",
  {
    "signal": undefined,
  },
]
`;

exports[`ApiService getQuote gets a quote with a broker commission 1`] = `
{
  "amount": "10000",
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService getQuote gets a quote with a broker commission 2`] = `
[
  "https://swapperoo.org/quote?amount=10000&srcChain=Bitcoin&srcAsset=BTC&destChain=Ethereum&destAsset=ETH&brokerCommissionBps=15",
  {
    "signal": undefined,
  },
]
`;
